--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:co": "rm -rf coverage && ng test --watch --code-coverage",
-    "test2": "nyc mocha"
+    "test2": "nyc mocha",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -35,7 +36,10 @@
     "@angular-devkit/build-angular": "^16.2.4",
     "@angular/cli": "^16.2.4",
     "@angular/compiler-cli": "^16.2.0",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@types/jasmine": "~4.3.0",
+    "husky": "^8.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
