--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,4 @@ jobs:
     if: github.event.pull_request.merged == true || github.event.action == 'push'
     runs-on: ubuntu-latest
     steps:
-      - run: echo "teste"
-        
+      - run: echo "teste 132"
