--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PWD }}
-      - name: Build and push Docker 
+      - name: Build and push Docker
         uses: docker/build-push-action@v5.1.0
         with:
-          context: ./
+          context: .
           file: ./Dockerfile
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USER }}/angular-spotify:v1
-            ${{ secrets.DOCKERHUB_USER }}/angular-spotify:latest         
-      
+            ${{ secrets.DOCKERHUB_USER }}/angular-spotify:latest
