--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,30 @@ name: CI-CD-Azure
 on:
   pull_request:
     types:
+      - opened
       - closed
     branches: ["main"]
-  workflow_dispatch:
 
 jobs:
+  Build_and_Test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4.0.0
+        with:
+          node-version: 20
+      - name: Install dependencies
+        run: npm install
+      - name: Angular Build
+        run: npm run build
+      - name: Run Tests
+        run: npm run test --watch=false
+
   CI:
     if: github.event.pull_request.merged == true
+    needs: [Build_and_Test]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
