--- a/angular.json
+++ b/angular.json
@@ -118,7 +118,8 @@
             },
             "include": [
               "**/*service.spec.ts"
-            ]
+            ],
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
