--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm install
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
       - name: Angular Build
         run: npm run build
       - name: Run Tests
