--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Angular Build
         run: npm run build
       - name: Run Tests
-        run: npm run test --watch=false --browsers=ChromeHeadlessCustom
+        run: ng test --watch=false --browsers=ChromeHeadlessCustom
 
   CI:
     if: github.event.pull_request.merged == true
