feat: pipeline-build-test - adjust in if to run job build and test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,11 @@ on:
       - opened
       - closed
       - reopened
-      - edited
     branches: ["main"]
 
 jobs:
   Build_and_Test:
-    if: github.event.pull_request.merged != false || true
+    if: github.event.pull_request.state == 'opened' || github.event.pull_request.merged == false || github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
