--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: TEST
-        run: echo ${{ github.event }}
+        run: echo ${{ github.event_name }} ' - ' ${{ github.event.pull_request.state }} ' - ' ${{ github.event.pull_request.merged }}
       - name: Checkout
         uses: actions/checkout@v4.1.1
       - name: Setup Node.js environment
