--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,11 @@ on:
 
 jobs:
   Build_and_Test:
-    if: ${{ github.event.pull_request.state == 'opened' || github.event.pull_request.merged == true }}
+    # if: ${{ github.event.pull_request.state == 'opened' || github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
     steps:
+      - name: Log
+        run: ${{ github.event.pull_request.state }} ' - ' ${{ github.action }} ' - ' ${{ github.action_status }} ' - ' ${{ github.event_name }}
       - name: Checkout
         uses: actions/checkout@v4.1.1
       - name: Setup Node.js environment
