--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
-name: CI-CD-Azure
+name: CI-CD-Angular-Spotify
 
 on:
   pull_request:
     types:
       - opened
-      - closed
       - reopened
+      - synchronize
     branches: ["main"]
 
 jobs:
@@ -15,16 +15,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.0
         with:
           node-version: 20
+
       - name: Install dependencies
         run: npm install
+
       - name: Install Angular CLI
         run: npm install -g @angular/cli
+
       - name: Angular Build
         run: npm run build
+
       - name: Run Tests
         run: ng test --watch=false --browsers=ChromeHeadlessCustom
 
@@ -50,7 +55,7 @@ jobs:
           image-ref: ${{ secrets.DOCKERHUB_USER }}/angular-spotify:${{ github.run_number }}
           exit-code: 1
           ignore-unfixed: true
-          severity: HIGH,CRITICAL
+          severity: LOW
 
       - name: Docker Login - Dockerhub
         uses: docker/login-action@v3.0.0
@@ -66,3 +71,11 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USER }}/angular-spotify:latest
+
+      - name: Deploy to Netlify
+        uses: jsmrcaga/action-netlify-deploy@master
+        with:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_DEPLOY_MESSAGE: "Prod deploy v${{ github.ref }}"
+          NETLIFY_DEPLOY_TO_PROD: true
