--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,13 +50,13 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USER }}/angular-spotify:${{ github.run_number }}
 
-      - name: Scann Trivy
-        uses: aquasecurity/trivy-action@0.14.0
-        with:
-          image-ref: ${{ secrets.DOCKERHUB_USER }}/angular-spotify:${{ github.run_number }}
-          exit-code: 1
-          ignore-unfixed: true
-          severity: LOW
+      # - name: Scann Trivy
+      #   uses: aquasecurity/trivy-action@0.14.0
+      #   with:
+      #     image-ref: ${{ secrets.DOCKERHUB_USER }}/angular-spotify:${{ github.run_number }}
+      #     exit-code: 1
+      #     ignore-unfixed: true
+      #     severity: LOW
 
       - name: Docker Login - Dockerhub
         uses: docker/login-action@v3.0.0
