feat: deploy-netlify - change main.yaml for run only test deploy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,6 +79,6 @@ jobs:
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          build_directory: dist
+          build_directory: "dist"
           NETLIFY_DEPLOY_MESSAGE: "Production deploy v${{ github.ref }}"
           NETLIFY_DEPLOY_TO_PROD: true
