--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,4 +81,4 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           build_directory: "dist"
           NETLIFY_DEPLOY_MESSAGE: "Production deploy v${{ github.ref }}"
-          NETLIFY_DEPLOY_TO_PROD: true
+          NETLIFY_DEPLOY_TO_PROD: false
