--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,8 @@ on:
     branches: ["main"]
 
 jobs:
-  Build_and_Test:
+  Build-and-Test-Angular:
     if: ${{ github.event.pull_request.state == 'open' }}
-    # if: ${{ github.event.pull_request.state == 'open' || github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -35,44 +34,12 @@ jobs:
       - name: Run Tests
         run: ng test --watch=false --browsers=ChromeHeadlessCustom
 
-  CI:
+  CI-Deploy-Netlify:
     if: github.event.pull_request.merged == true
-    # needs: [Build_and_Test]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
-
-      # - name: Build Docker
-      #   uses: docker/build-push-action@v5.1.0
-      #   with:
-      #     context: .
-      #     file: ./Dockerfile
-      #     tags: |
-      #       ${{ secrets.DOCKERHUB_USER }}/angular-spotify:${{ github.run_number }}
-
-      # - name: Scann Trivy
-      #   uses: aquasecurity/trivy-action@0.14.0
-      #   with:
-      #     image-ref: ${{ secrets.DOCKERHUB_USER }}/angular-spotify:${{ github.run_number }}
-      #     exit-code: 1
-      #     ignore-unfixed: true
-      #     severity: LOW
-
-      # - name: Docker Login - Dockerhub
-      #   uses: docker/login-action@v3.0.0
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USER }}
-      #     password: ${{ secrets.DOCKERHUB_PWD }}
-
-      # - name: Push Image Docker
-      #   uses: docker/build-push-action@v5.1.0
-      #   with:
-      #     context: .
-      #     file: ./Dockerfile
-      #     push: true
-      #     tags: |
-      #       ${{ secrets.DOCKERHUB_USER }}/angular-spotify:latest
 
       - name: Deploy to Netlify
         uses: jsmrcaga/action-netlify-deploy@master
